fargate/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api
  namespace: python-api
  labels:
    app: python-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-api
  strategy: {}
  template:
    metadata:
      labels:
        app: python-api
    spec:
      containers:
      - name: python-api
        image: gcr.io/devsar-innovation-lab/hello-python:1.0
        ports:
          - containerPort: 8080
        resources: {}
